@@ -7,8 +7,10 @@ package org.wpilib.math.trajectory;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
+import org.wpilib.math.geometry.Pose2d;
+import org.wpilib.math.geometry.Rotation2d;
 import org.wpilib.math.kinematics.ChassisSpeeds;
 import org.wpilib.math.kinematics.DifferentialDriveKinematics;
 import org.wpilib.math.trajectory.constraint.DifferentialDriveKinematicsConstraint;
@@ -21,20 +23,19 @@ class DifferentialDriveKinematicsConstraintTest {
     var kinematics = new DifferentialDriveKinematics(Units.inchesToMeters(27));
     var constraint = new DifferentialDriveKinematicsConstraint(kinematics, maxVelocity);
 
-    Trajectory trajectory =
-        TrajectoryGeneratorTest.getTrajectory(Collections.singletonList(constraint));
+    Trajectory<SplineSample> trajectory =
+        TrajectoryGenerator.generateTrajectory(
+            List.of(new Pose2d(0, 0, Rotation2d.kZero), new Pose2d(1, 0, Rotation2d.kZero)),
+            new TrajectoryConfig(1, 1).addConstraint(constraint));
+    var duration = trajectory.duration;
 
-    var duration = trajectory.getTotalTime();
-    var t = 0.0;
-    var dt = 0.02;
-
-    while (t < duration) {
-      var point = trajectory.sample(t);
-      var chassisSpeeds = new ChassisSpeeds(point.velocity, 0, point.velocity * point.curvature);
+    for (double t = 0; t < duration; t += 0.02) {
+      var point = trajectory.sampleAt(t);
+      var chassisSpeeds =
+          new ChassisSpeeds(point.velocity.vx, 0, point.velocity.vx * point.curvature);
 
       var wheelSpeeds = kinematics.toWheelSpeeds(chassisSpeeds);
 
-      t += dt;
       assertAll(
           () -> assertTrue(wheelSpeeds.left <= maxVelocity + 0.05),
           () -> assertTrue(wheelSpeeds.right <= maxVelocity + 0.05));
